tests/NormalTests/paczka1/small_fuzzy/77663046.err
Error in line 12: BxHWt1jA8xw A656 56,0
Error in line 2: oq30hlF7YG A278 29,5
